--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -7,6 +7,11 @@
     color: #ffffff;
 }
 
+.logo_img {
+    width: 14em;
+    cursor: pointer;
+}
+
 .logo {
     display: flex;
     justify-content: center;
