--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,14 +1,33 @@
 .footer {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    background-color: #333;
-    height: 150px;
-    margin-top: 2em;
-    border-top: 3px solid #111;
+    background-color: #FACF9D;
+    height: 232px;
     color: #fff;
+    padding: 60px 120px;
 }
 
-.footer span {
-    font-weight: bold;
+.footer p {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 40px;
+    color: #444;
+}
+
+.img {
+    width: 2em;
+    height: 2em;
+}
+
+.logo {
+    width: 13em;
+}
+
+.social_network {
+    display: flex;
+    align-items: center;
+    gap: 8px;
 }
